Apply suggestions from code review
Co-authored-by: Stefan van der Walt <sjvdwalt@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -15,13 +15,13 @@ inputs:
     description: 'Token to upload to scientific python org'
     required: true
   anaconda_nightly_upload_url:
-    description: 'URL to upload to scientific python org'
+    description: 'URL of the index to upload the wheels to'
     required: false
     default: scientific-python-nightly-wheels
   anaconda_nightly_upload_labels:
     description: 'Labels assigned to the uploaded artifacts'
     required: false
-    default: main
+    default: [main]
 
 runs:
   using: 'docker'
