Handle comma and new line seperated label lists
Using space seperated lists is not standard across GitHub Actions, which in general assume that you're providing a newline seperatd or comma seperated list (c.f. https://github.com/docker/build-push-action?tab=readme-ov-file#inputs as an example).

So if we agree that we should be expecting newline seperated or comma seperated inputs then we can just treat all input the same by:

First, converting all input into a comma separated string
Then, create an array of the comma seperated labels
Finally, parse that array into a single string that represents all the label arguments to be included (you were already doing this part)

--- a/action.yml
+++ b/action.yml
@@ -19,7 +19,7 @@ inputs:
     required: false
     default: scientific-python-nightly-wheels
   anaconda_nightly_upload_labels:
-    description: 'Labels assigned to the uploaded artifacts'
+    description: 'List of labels assigned to the uploaded artifacts'
     required: false
     default: main
 
