--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,9 @@ jobs:
           python -m pip install build twine
           python -m pip list
 
-      - name: Build a wheel and a sdist
+      - name: Build v0.0.1 wheel and sdist
         run: |
-          PYTHONWARNINGS=error,default::DeprecationWarning python -m build --outdir ./dist tests/test_package
+          python -m build --outdir ./dist tests/test_package
 
       - name: Verify the distribution
         run: twine check --strict dist/*
@@ -52,6 +52,34 @@ jobs:
         with:
           artifacts_path: dist
           anaconda_nightly_upload_token: ${{ secrets.UPLOAD_TOKEN }}
+
+      - name: Build v0.0.2 wheel and sdist
+        run: |
+          # Bump version to avoid wheel name conflicts
+          sed -i 's/0.0.1/0.0.2/g' tests/test_package/pyproject.toml
+          rm ./dist/*
+          python -m build --outdir ./dist tests/test_package
+
+      - name: Test upload with non-main label
+        uses: ./
+        with:
+          artifacts_path: dist
+          anaconda_nightly_upload_token: ${{ secrets.UPLOAD_TOKEN }}
+          anaconda_nightly_upload_labels: test
+
+      - name: Build v0.0.3 wheel and sdist
+        run: |
+          # Bump version to avoid wheel name conflicts
+          sed -i 's/0.0.2/0.0.3/g' tests/test_package/pyproject.toml
+          rm ./dist/*
+          python -m build --outdir ./dist tests/test_package
+
+      - name: Test upload with multiple labels
+        uses: ./
+        with:
+          artifacts_path: dist
+          anaconda_nightly_upload_token: ${{ secrets.UPLOAD_TOKEN }}
+          anaconda_nightly_upload_labels: dev,test
 
   cleanup:
     runs-on: ubuntu-latest
