--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
         run: twine check --strict dist/*
 
       - name: List contents of sdist
-        run: python -m tarfile --list dist/test-package-*.tar.gz
+        run: python -m tarfile --list dist/test_package-*.tar.gz
 
       - name: List contents of wheel
         run: python -m zipfile --list dist/test_package-*.whl
