ENH: Use pixi to run action as composite
* Use pixi to manage the environment fully, which removes the needs for
  micromamba and a Linux container, allowing the action to be run as a
  'composite' action.
   - This allows the action to be used on macOS runners in addition
     to Linux.
   - Add pixi project configuration and pixi lock file.
   - Add 'osx-64' and 'osx-arm64' platforms to pixi environment solves
     to allow for use on Linux and macOS runners.
   - Use prefix-dev/setup-pixi GitHub action to setup pixi for the action.
   - Explicitly enable the 'locked' option for prefix-dev/setup-pixi.
   - Don't allow for post job cleanup to avoid errors if the action is
     run multiple times in a workflow (this is a downside of no longer
     being in a Linux container).
   - Note: GitHub Actions takes care of cleaning up the environment after
     each run, so you are not responsible for manually unsetting all
     environment variables between steps to avoid secret leakage.
   - Make cmd.sh executable (chmod +x).
* Remove use of micromamba in the upload script.
* Remove the conda-lock files and the Docker based locking workflow.
* Remove Dockerfile.
* Note in the README that the runner used can be either Linux or macOS.
* Update version numbers of action to v0.5.0.

--- a/action.yml
+++ b/action.yml
@@ -5,7 +5,7 @@ permissions:
   contents: read
   metadata: read
 author: "Scientific-Python"
-version: "0.1.0"
+version: "0.5.0"
 
 inputs:
   artifacts_path:
@@ -24,5 +24,23 @@ inputs:
     default: main
 
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
+  using: "composite"
+  steps:
+    - name: Set up pixi
+      uses: prefix-dev/setup-pixi@ba3bb36eb2066252b2363392b7739741bb777659  # v0.8.1
+      with:
+        locked: true
+        cache: true
+        cache-write: ${{ github.event_name == 'push' && github.ref_name == 'main' }}
+        # Avoid post cleanup errors if action run multiple times
+        post-cleanup: false
+
+    - name: Upload wheels
+      shell: bash
+      env:
+        INPUT_ARTIFACTS_PATH: ${{ inputs.artifacts_path }}
+        INPUT_ANACONDA_NIGHTLY_UPLOAD_ORGANIZATION: ${{ inputs.anaconda_nightly_upload_organization }}
+        INPUT_ANACONDA_NIGHTLY_UPLOAD_TOKEN: ${{ inputs.anaconda_nightly_upload_token }}
+        INPUT_ANACONDA_NIGHTLY_UPLOAD_LABELS: ${{ inputs.anaconda_nightly_upload_labels }}
+      run: |
+        pixi run cmd.sh
