--- a/remove-wheels/action.yml
+++ b/remove-wheels/action.yml
@@ -37,7 +37,7 @@ runs:
     - name: Install dependencies
       shell: bash
       run: |
-        pixi run pip install anaconda-client==1.12.3 curl jq
+        sudo apt-get update && sudo apt-get install -y curl jq
 
     - name: Remove old wheels
       shell: bash
