--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,18 +31,15 @@ jobs:
         with:
           python-version: '3.x'
 
-      - name: Install python-build and twine
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install build twine
-          python -m pip list
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v3
 
       - name: Build v0.0.1 wheel and sdist
         run: |
-          python -m build --outdir ./dist _action_path/tests/test_package
+          uv tool run --from build pyproject-build --installer=uv --outdir ./dist _action_path/tests/test_package
 
       - name: Verify the distribution
-        run: twine check --strict dist/*
+        run: uv tool run twine check --strict dist/*
 
       - name: List contents of sdist
         run: python -m tarfile --list dist/test_package-*.tar.gz
@@ -67,7 +64,7 @@ jobs:
           # Bump version to avoid wheel name conflicts
           sed -i 's/0.0.1/0.0.2/g' _action_path/tests/test_package/pyproject.toml
           rm ./dist/*
-          python -m build --outdir ./dist _action_path/tests/test_package
+          uv tool run --from build pyproject-build --installer=uv --outdir ./dist _action_path/tests/test_package
 
       - name: Test upload with non-main label
         uses: ./_action_path/
@@ -81,7 +78,7 @@ jobs:
           # Bump version to avoid wheel name conflicts
           sed -i 's/0.0.2/0.0.3/g' _action_path/tests/test_package/pyproject.toml
           rm ./dist/*
-          python -m build --outdir ./dist _action_path/tests/test_package
+          uv tool run --from build pyproject-build --installer=uv --outdir ./dist _action_path/tests/test_package
 
       - name: Test upload with multiple labels
         uses: ./_action_path/
