--- a/remove-wheels/action.yml
+++ b/remove-wheels/action.yml
@@ -7,7 +7,7 @@ permissions:
 author: "Scientific-Python"
 # TODO: have to think about versioning; whether to version separately, or
 # for it to be in sync with the version for the upload action
-version: "0.1.0"
+version: "0.1.0" # should be kept in sync with the version in remove-wheels/pixi.toml
 
 inputs:
   n_latest_uploads:
@@ -43,4 +43,4 @@ runs:
         INPUT_ANACONDA_USER: ${{ inputs.anaconda_user }}
         INPUT_ANACONDA_TOKEN: ${{ inputs.anaconda_token }}
       run: |
-        pixi run --manifest-path ${{ github.action_path }}/pixi.toml ${{ github.action_path }}/remove_wheels.sh
+        pixi run --manifest-path ${{ github.action_path }}/remove-wheels/pixi.toml ${{ github.action_path }}/remove_wheels.sh
