--- a/pixi.toml
+++ b/pixi.toml
@@ -1,13 +1,13 @@
-[project]
+[workspace]
 authors = ["Scientific Python"]
 channels = ["conda-forge"]
 description = "Environment for the scientific-python/upload-nightly-action GitHub action"
 name = "upload-nightly-action"
 platforms = ["linux-64", "osx-64", "osx-arm64"]
-version = "0.6.1"
+version = "0.6.2"
 
 [tasks]
 
 [dependencies]
-python = "3.12.*"
-anaconda-client = "==1.12.3"
+python = "3.13.*"
+anaconda-client = "==1.13.0"
