--- a/.github/workflows/remove-wheels.yml
+++ b/.github/workflows/remove-wheels.yml
@@ -49,10 +49,23 @@ jobs:
           echo ""
           anaconda remove --help
 
-      - name: Generate list of names
+
+      - name: Generate list of package names
         id: set-outputs
+        shell: python
         run: |
-          python -c "from binstar_client.utils import get_server_api; api = get_server_api(token='$ANACONDA_TOKEN'); pkgs = [p['name'] for p in api.user_packages('scientific-python-nightly-wheels')]; pkgs.pop('openblas-libs'); print(pkgs)"
+            import os
+            import json
+            from binstar_client.utils import get_server_api
+
+            api = get_server_api(token=os.environ.get("ANACONDA_TOKEN"))
+
+            pkgs = [p['name'] for p in api.user_packages('scientific-python-nightly-wheels')]
+            with open('packages-ignore-from-cleanup.txt', 'r') as f:
+                pkgs_ignore = [line.strip() for line in f.readlines()]
+
+            pkgs = [p for p in pkgs if p not in pkgs_ignore]
+            print(json.dumps(pkgs))
         env:
           ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
 
