--- a/.github/workflows/remove-wheels.yml
+++ b/.github/workflows/remove-wheels.yml
@@ -35,8 +35,7 @@ jobs:
         with:
           environment-name: remove-wheels
           create-args: >-
-            python=3.12
-            anaconda-client=1.12.3
+            anaconda-client==1.14.0
             curl
             jq
 
